--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-    "*.itx" : "plaintext"
-    }
+        "*.itx": "intext"
+    },
+    "python.analysis.typeCheckingMode": "standard"
 }
